Added saving functionality

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ LTspiceModels/bestCase.raw
 LTspiceModels/linearDraft01.log
 LTspiceModels/linearDraft01.op.raw
 LTspiceModels/linearDraft01.raw
+results_P4.csv
