--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ LTspiceModels/linearDraft01.log
 LTspiceModels/linearDraft01.op.raw
 LTspiceModels/linearDraft01.raw
 results_P4.csv
+simulation_plots/*
